# ur_hw

./: .$系统与控制实验(3)码垛实验指南.drawio.bkp  .bashrc  Changefile.md  single_arm_README.md  系统与控制实验(3)码垛实验指南.drawio
src/PWS/: hw.sh  singlelaunch.sh  singlelaunch_zsh.sh
src/dual_arm/Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur5e_bringup.launch  ur_control.launch
src/dual_arm/arm_robot/arm_robot_description/urdf/: dual_arm_robot.xacro  dual_arm_robot.xacro.bak  expanded_urdf.xml  single_arm_robot.xacro  single_arm_robot.xacro.bak
src/dual_arm/arm_robot/single_robot_moveit_config/: .setup_assistant
src/dual_arm/arm_robot/single_robot_moveit_config/config/: ompl_planning.yaml  ur5e_robot.srdf
src/dual_arm/arm_robot/single_robot_moveit_config/launch/: ur5e_moveit_planning_execution.launch
src/dual_arm/manipulator/: CMakeLists.txt
src/dual_arm/manipulator/config/: single_arm_moveit.rviz
src/dual_arm/manipulator/data/: robot_JP.json
src/dual_arm/manipulator/include/manipulator/: robot_arm.h
src/dual_arm/manipulator/scripts/: fake_command.py  hw_move.py  obstacle_sampler.py  sampled_objects.json
src/dual_arm/manipulator/src/: B_record.cpp  exp_capsulation.cpp  station_func.cpp  universal_tools.cpp
src/dual_arm/universal_robot/ur_description/launch/: load_dual_singlearm.launch
src/dual_arm/universal_robot/ur_gazebo/meshes/dh_pgi/: RGI-100-22-O-S_3D_v3.0.STL
src/dual_arm/universal_robot/ur_gazebo/meshes/tool_camera/: 102camera.STL
src/locatornew/: CMakeLists.txt  README.md
src/locatornew/launch/: location_service.launch
src/locatornew/scripts/: analyze.py  block_detector.py  calibrated_camera_tf_publisher.py  capture.py  circleGrid_plot.py  hw_grab.py  location_service.py  robot_controller.py  tf_calc.py
src/locatornew/scripts/config/: 102桌面.json  121光学平台.json  example.json  液体进样器1ml.json  液体进样器5ml.json  电化学.json  离心纯化.json  紫外光谱仪.json  自动进样天平.json  试剂架.json  通风橱.json
src/locatornew/scripts/img_take/: capture-log.txt  pose.txt
src/locatornew/scripts/matrix/: left_camera_matrix.txt  left_dist_coeffs.txt  left_gTc.txt  oneloc_bTt.txt  single_camera_matrix.txt  single_dist_coeffs.txt  single_gTc.txt
